--- a/Decison_tree_models.ipynb
+++ b/Decison_tree_models.ipynb
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "ec43dac7",
    "metadata": {},
    "outputs": [
@@ -1158,8 +1158,8 @@
     "\n",
     "plt.figure(figsize=(10, max(4, 0.35 * len(top))))\n",
     "ax = top.plot(kind=\"barh\", color=\"C1\")\n",
-    "ax.set_xlabel(\"Importância\")\n",
-    "ax.set_title(f\"Top {len(top)} Features - Importância (J48-like)\")\n",
+    "ax.set_xlabel(\"Importance\")\n",
+    "ax.set_title(f\"Top {len(top)} Features (J48-like)\")\n",
     "ax.grid(axis=\"x\", linestyle=\"--\", alpha=0.5)\n",
     "\n",
     "for i, (feat, val) in enumerate(top.items()):\n",
